--- a/.github/actions/export-gerbers/action.yml
+++ b/.github/actions/export-gerbers/action.yml
@@ -15,7 +15,7 @@ inputs:
     default: '--no-assembly'
 runs:
   using: 'docker'
-  image: 'docker://yaqwsx/kikit:v0.7'
+  image: 'docker://yaqwsx/kikit'
   entrypoint: '/bin/sh'
   args:
     - '-c'
