--- a/.github/actions/export-gerbers/action.yml
+++ b/.github/actions/export-gerbers/action.yml
@@ -21,4 +21,6 @@ runs:
     - '-c'
     - |
       mkdir -p $GITHUB_WORKSPACE/${{ inputs.gerbers_dir }} ;
-      kikit fab ${{ inputs.fab }} ${{ inputs.flags }} $GITHUB_WORKSPACE/${{ inputs.pcb_file }} $GITHUB_WORKSPACE/${{ inputs.gerbers_dir }}
+      kikit fab ${{ inputs.fab }} ${{ inputs.flags }} $GITHUB_WORKSPACE/${{ inputs.pcb_file }} $GITHUB_WORKSPACE/${{ inputs.gerbers_dir }} ;
+      kikit present boardpage gerbers --description $GITHUB_WORKSPACE/README.md --board "" "" $GITHUB_WORKSPACE/${{ inputs.pcb_file }} --name myname
+
