--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,23 @@ jobs:
         with:
           pcb_file: hardware/nrfmicro.kicad_pcb
           gerbers_dir: gerbers
+
       - name: Persist output
         uses: actions/upload-artifact@v2
         with:
           name: nrfmicro-gerbers
           path: gerbers
+
+      - name: Get Latest Release Upload URL
+        id: geturl
+        run:   |
+           upload_url=$(curl -sL https://api.github.com/repos/${{github.repository}}/releases/latest?access_token=${{ secrets.GITHUB_TOKEN }} | jq -r '.upload_url')
+           echo ::set-output name=upload_url::$upload_url
+
+      - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: shogo82148/actions-upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.geturl.outputs.upload_url }}
+          asset_path: $GITHUB_WORKSPACE/gerbers/nrfmicro-front.png
+          overwrite: true
