--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,16 +20,14 @@ jobs:
           name: nrfmicro-gerbers
           path: gerbers
 
-      - name: Get Latest Release Upload URL
-        id: geturl
-        run:   |
-           upload_url=$(curl -sL https://api.github.com/repos/${{github.repository}}/releases/latest?access_token=${{ secrets.GITHUB_TOKEN }} | jq -r '.upload_url')
-           echo ::set-output name=upload_url::$upload_url
+      - name: Gets latest created release info
+        id: latest_release_info
+        uses: jossef/action-latest-release-info@v1.1.0
 
       - name: Upload Release Asset
-        id: upload-release-asset 
+        id: upload-release-asset
         uses: shogo82148/actions-upload-release-asset@v1
         with:
-          upload_url: ${{ steps.geturl.outputs.upload_url }}
+          upload_url: ${{ steps.latest_release_info.outputs.upload_url }}
           asset_path: $GITHUB_WORKSPACE/gerbers/nrfmicro-front.png
           overwrite: true
