--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,14 +20,17 @@ jobs:
           name: nrfmicro-gerbers
           path: gerbers
 
-      - name: Gets latest created release info
-        id: latest_release_info
-        uses: jossef/action-latest-release-info@v1.1.0
+      - name: Get upload URL
+        id: geturl
+        run:   |
+               upload_url=$(curl -sL https://api.github.com/repos/actions/checkout/releases/latest | jq -r '.upload_url')
+               echo UPLOAD_URL=$upload_url >> $GITHUB_ENV
+        shell: bash
 
       - name: Upload Release Asset
         id: upload-release-asset
         uses: shogo82148/actions-upload-release-asset@v1
         with:
-          upload_url: ${{ steps.latest_release_info.outputs.upload_url }}
+          upload_url: ${{ env.UPLOAD_URL }}
           asset_path: $GITHUB_WORKSPACE/gerbers/nrfmicro-front.png
           overwrite: true
