--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,11 @@ jobs:
         shell: bash
 
       - name: Upload Release Asset
-        id: upload-release-asset
-        uses: shogo82148/actions-upload-release-asset@v1
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ env.UPLOAD_URL }}
+          upload_url: "${{ env.UPLOAD_URL }}"
           asset_path: $GITHUB_WORKSPACE/gerbers/nrfmicro-front.png
-          overwrite: true
+          asset_name: nrfmicro-front.png
+          asset_content_type: image/png
