--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,3 +44,13 @@ jobs:
           upload_url: ${{ steps.latest_release_info.outputs.upload_url }}
           asset_path: ./gerbers/nrfmicro-front.png
 
+      - name: Upload gerbers
+        uses: shogo82148/actions-upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        with:
+          overwrite: true
+          upload_url: ${{ steps.latest_release_info.outputs.upload_url }}
+          asset_path: ./gerbers/gerbers.zip
+
+
