--- a/.github/actions/export-gerbers/action.yml
+++ b/.github/actions/export-gerbers/action.yml
@@ -13,6 +13,9 @@ inputs:
   flags:
     description: 'Additional flags for kikit fab'
     default: '--no-assembly'
+  draw:
+    description: 'PCBDraw options'
+    default: '--dpi 800 --filter "" --style builtin:set-blue-enig.json'
 runs:
   using: 'docker'
   image: 'docker://yaqwsx/kikit:nightly'
@@ -22,6 +25,6 @@ runs:
     - |
       mkdir -p $GITHUB_WORKSPACE/${{ inputs.gerbers_dir }} ;
       kikit fab ${{ inputs.fab }} --no-assembly --no-drc  ${{ inputs.flags }} $GITHUB_WORKSPACE/${{ inputs.pcb_file }} $GITHUB_WORKSPACE/${{ inputs.gerbers_dir }} ;
-      pcbdraw --dpi 800 --filter "" --style builtin:jlcpcb-green-enig.json $GITHUB_WORKSPACE/${{ inputs.pcb_file }} $GITHUB_WORKSPACE/${{ inputs.gerbers_dir }}/front.png ;
-      pcbdraw --back --dpi 800 --filter "" --style builtin:jlcpcb-green-enig.json $GITHUB_WORKSPACE/${{ inputs.pcb_file }} $GITHUB_WORKSPACE/${{ inputs.gerbers_dir }}/back.png ;
+      pcbdraw ${{ inputs.draw }} $GITHUB_WORKSPACE/${{ inputs.pcb_file }} $GITHUB_WORKSPACE/${{ inputs.gerbers_dir }}/front.png ;
+      pcbdraw --back ${{ inputs.draw }} $GITHUB_WORKSPACE/${{ inputs.pcb_file }} $GITHUB_WORKSPACE/${{ inputs.gerbers_dir }}/back.png ;
 #     kikit present boardpage gerbers --description $GITHUB_WORKSPACE/README.md --board "" "" $GITHUB_WORKSPACE/${{ inputs.pcb_file }} --name myname
