--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,3 +49,21 @@ jobs:
           upload_url: ${{ steps.latest_release_info.outputs.upload_url }}
           asset_path: ./gerbers/gerbers.zip
           asset_name: nrfmicro-latest-gerbers.zip
+
+      - name: Upload artifacts 1
+        uses: actions/upload-artifact@v2
+        with:
+          name: gerbers.zip
+          path: ./gerbers/gerbers.zip
+
+      - name: Upload artifacts 2
+        uses: actions/upload-artifact@v2
+        with:
+          name: front.png
+          path: ./gerbers/front.png
+
+      - name: Upload artifacts 3
+        uses: actions/upload-artifact@v2
+        with:
+          name: back.png
+          path: ./gerbers/back.png
