--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
           overwrite: true
           upload_url: ${{ steps.latest_release_info.outputs.upload_url }}
           asset_path: ./gerbers/front.png
-          asset_name: nrfmicro-latest-front.png
+          asset_name: ${GITHUB_REPOSITORY#*/}-${GITHUB_REF##*/}-front.png
 
       - name: Upload back
         uses: shogo82148/actions-upload-release-asset@v1
@@ -43,7 +43,7 @@ jobs:
           overwrite: true
           upload_url: ${{ steps.latest_release_info.outputs.upload_url }}
           asset_path: ./gerbers/back.png
-          asset_name: nrfmicro-latest-back.png
+          asset_name: ${GITHUB_REPOSITORY#*/}-${GITHUB_REF##*/}-back.png
 
       - name: Upload gerbers
         uses: shogo82148/actions-upload-release-asset@v1
@@ -53,4 +53,4 @@ jobs:
           overwrite: true
           upload_url: ${{ steps.latest_release_info.outputs.upload_url }}
           asset_path: ./gerbers/gerbers.zip
-          asset_name: nrfmicro-latest-gerbers.zip
+          asset_name: ${GITHUB_REPOSITORY#*/}-${GITHUB_REF##*/}-gerbers.zip
