--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,10 @@ jobs:
           pcb_file: hardware/nrfmicro.kicad_pcb
           gerbers_dir: gerbers
 
+      - name: Set Variables
+        run: |
+          echo "prefix=${GITHUB_REPOSITORY#*/}-${GITHUB_REF##*/}" >> $GITHUB_ENV
+
       - name: Gets latest created release info
         id: latest_release_info
         uses: jossef/action-latest-release-info@v1.1.0
@@ -28,7 +32,7 @@ jobs:
           overwrite: true
           upload_url: ${{ steps.latest_release_info.outputs.upload_url }}
           asset_path: ./gerbers/front.png
-          asset_name: "${GITHUB_REPOSITORY#*/}-${GITHUB_REF##*/}-front.png"
+          asset_name: ${{ env.prefix }}-front.png
 
       - name: Upload back
         uses: shogo82148/actions-upload-release-asset@v1
@@ -38,7 +42,7 @@ jobs:
           overwrite: true
           upload_url: ${{ steps.latest_release_info.outputs.upload_url }}
           asset_path: ./gerbers/back.png
-          asset_name: "${GITHUB_REPOSITORY#*/}-${GITHUB_REF##*/}-back.png"
+          asset_name: ${{ env.prefix }}-back.png
 
       - name: Upload gerbers
         uses: shogo82148/actions-upload-release-asset@v1
@@ -48,4 +52,4 @@ jobs:
           overwrite: true
           upload_url: ${{ steps.latest_release_info.outputs.upload_url }}
           asset_path: ./gerbers/gerbers.zip
-          asset_name: "${GITHUB_REPOSITORY#*/}-${GITHUB_REF##*/}-gerbers.zip"
+          asset_name: ${{ env.prefix }}-gerbers.zip
