--- a/.github/actions/export-gerbers/action.yml
+++ b/.github/actions/export-gerbers/action.yml
@@ -15,7 +15,7 @@ inputs:
     default: '--no-assembly --no-drc'
   draw:
     description: 'PCBDraw options'
-    default: '--filter "" --style builtin:jlcpcb-green-enig.json'
+    default: 'plot --dpi 800 --filter "" --style builtin:jlcpcb-green-enig.json'
 runs:
   using: 'docker'
   image: 'docker://yaqwsx/kikit:nightly'
@@ -26,5 +26,5 @@ runs:
       mkdir -p $GITHUB_WORKSPACE/${{ inputs.gerbers_dir }} ;
       kikit fab ${{ inputs.fab }} ${{ inputs.flags }} $GITHUB_WORKSPACE/${{ inputs.pcb_file }} $GITHUB_WORKSPACE/${{ inputs.gerbers_dir }} ;
       pcbdraw ${{ inputs.draw }} $GITHUB_WORKSPACE/${{ inputs.pcb_file }} $GITHUB_WORKSPACE/${{ inputs.gerbers_dir }}/front.png ;
-      pcbdraw --side back ${{ inputs.draw }} $GITHUB_WORKSPACE/${{ inputs.pcb_file }} $GITHUB_WORKSPACE/${{ inputs.gerbers_dir }}/back.png ;
+      pcbdraw ${{ inputs.draw }} --side back $GITHUB_WORKSPACE/${{ inputs.pcb_file }} $GITHUB_WORKSPACE/${{ inputs.gerbers_dir }}/back.png ;
 #     kikit present boardpage gerbers --description $GITHUB_WORKSPACE/README.md --board "" "" $GITHUB_WORKSPACE/${{ inputs.pcb_file }} --name myname
